# firmware

./: .envrc  .gitignore  Cargo.toml  flake.nix
.devcontainer/: devcontainer.json
.github/workflows/: rust_ci.yml
src/: config.rs  lib.rs  system.rs  wifi.rs
src/driver/: indicator_lights.rs  mod.rs  sensor.rs
